@@ -5,7 +5,7 @@ module Netzke
     end
     
     def set_session_data
-      Netzke::Main.session = session
+      ::Netzke::Main.session = session
       session[:netzke_user_id] = defined?(current_user) ? current_user.try(:id) : nil
       # set netzke_just_logged_in and netzke_just_logged_out states (may be used by Netzke widgets)
       if session[:_netzke_next_request_is_first_after_login]
