@@ -3,6 +3,8 @@
 
 * Broken backward compatibility
   * js_extend_properties renamed to js_properties
+  * ext_config config level is removed; put all that configuration in the top level
+  * all actions should now be wrapped up in the js_action method
 
 = v0.5.3 - 2010-06-14
 * Fix: Getting rid of deprecation warnings about tasks not sitting in lib.
